--- a/verseny.html
+++ b/verseny.html
@@ -39,6 +39,7 @@
             font-weight: bolder;
             text-align: center;
             margin-bottom: 10px;
+            font-size: 1.6rem;
         }
 
         .container {
@@ -71,8 +72,8 @@
             border-radius: 20px;
             padding: 20px;
             flex-grow: 1;
-            min-height: 380px;
-            max-height: 380px;
+            min-height: 400px;
+            max-height: 400px;
             overflow-y: auto;
             color: white;
         }
@@ -220,7 +221,7 @@
         const allQuestions = [
             { q: "Hány aranydarabba kerül a 'Mézsör körzet' a kovács mesternél?", options: ["200 ezer", "125 ezer", "150 ezer", "75 ezer"], answer: [1], type: "single" },
             { q: "Hány ezüstdarabba kerül az 'Északi védelmező' a kovács mesternél?", options: ["650", "480", "440", "520"], answer: [2], type: "single" },
-            { q: "Mennyi a fogyasztása 1320 mézsört fogyasztó katonának 4-es szintű 'Mézsör desztiláló' épülettel?", options: ["1584", "2640", "2376", "1056"], answer: [2], type: "single" },
+            { q: "Mennyi a fogyasztása 1320 mézsört fogyasztó katonának 4-es szintű 'Relikvia mézsör-desztiláló' épülettel?", options: ["1584", "2640", "2376", "1056"], answer: [2], type: "single" },
             { q: "Mennyi a maximális támadási hullám jelenleg a játékban?", options: ["18", "19", "20", "21"], answer: [2], type: "single" },
             { q: "Mennyibe kerül a legdrágább dukátos kutatás a legendák csarnokában?", options: ["250", "800", "300", "900"], answer: [2], type: "single" },
 
