--- a/verseny.html
+++ b/verseny.html
@@ -441,8 +441,8 @@
             <p>Ez az egyedi kódod, másold ki és küldd el Discordon:</p>
             <div id="resultCode" class="code-box">${generateCode(playerName, server, totalQuestions, Math.round(score * 100))}</div>
             <div class="mt-4 text-center">
-                <a href="https://discord.com/channels/602832237146406914/1379164927444521180" target="_blank" class="btn btn-primary me-2">📬 E4K csatornára</a>
-                <a href="https://discord.com/channels/602832237146406914/1379165321797042298" target="_blank" class="btn btn-primary">📬 Küldés EMPIRE csatornára</a>
+                <a href="https://discord.com/channels/602832237146406914/1379164927444521180" target="_blank" class="btn btn-primary me-2 mt-2">📬 Küldés E4K csatornára</a>
+                <a href="https://discord.com/channels/602832237146406914/1379165321797042298" target="_blank" class="btn btn-primary mt-2">📬 Küldés EMPIRE csatornára</a>
             </div>
         `;
             } else {
