--- a/verseny.html
+++ b/verseny.html
@@ -231,7 +231,7 @@
             { q: "Válaszd ki, melyik események adnak 'mester+' módban +6 hullámos megjelenést.", options: ["Nomád", "Szamuráj", "Idegen", "Vérvarjú"], answer: [1, 3], type: "multiple" },
             { q: "Válaszd ki, azokat a katonákat, amik megtalálhatóak a játékban.", options: ["Galád veterán alabárdos", "Jeges nyilas", "Erdőírtó", "Veterán gnómád harcos"], answer: [0, 1], type: "multiple" },
 
-            { q: "Igaz vagy hamis? A nomád esemény adhatnak 'Szövet' jutalmat.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
+            { q: "Igaz vagy hamis? A nomád esemény adhat 'Szövet' jutalmat.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
             { q: "Igaz vagy hamis? Van olyan nemességi verseny, ahol támadási eszközt kell szerezni.", options: ["Igaz", "Hamis"], answer: [0], type: "truefalse" },
             { q: "Igaz vagy hamis? A királysági ligában a legmagasabb címet 'Pusztító'-nak hívják.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
             { q: "Igaz vagy hamis? A 100-as szintű 'Dicsőségemlékmű' 500% dicsőségpont bónuszt ad.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
