--- a/verseny.html
+++ b/verseny.html
@@ -217,26 +217,20 @@
     </div>
 
     <script>
-        //3*5 kérdés (10 megjelenítve)
-        const allQuestions = [
-            { q: "Hány aranydarabba kerül a 'Mézsör körzet' a kovács mesternél?", options: ["200 ezer", "125 ezer", "150 ezer", "75 ezer"], answer: [1], type: "single" },
-            { q: "Hány ezüstdarabba kerül az 'Északi védelmező' a kovács mesternél?", options: ["650", "480", "440", "520"], answer: [2], type: "single" },
-            { q: "Mennyi a fogyasztása 1320 mézsört fogyasztó katonának 4-es szintű 'Relikvia mézsör-desztiláló' épülettel?", options: ["1584", "2640", "2112", "1056"], answer: [2], type: "single" },
-            { q: "Mennyi a maximális támadási hullám jelenleg a játékban?", options: ["18", "19", "20", "21"], answer: [2], type: "single" },
-            { q: "Mennyibe kerül a legdrágább dukátos kutatás a legendák csarnokában?", options: ["250", "800", "300", "900"], answer: [3], type: "single" },
+        let allQuestions = [];
 
-            { q: "Válaszd ki azokat az épületeket, amelyek növelik az élelem termelést.", options: ["Csűr", "Relikvia farm", "Malom", "Pékség"], answer: [0, 2], type: "multiple" },
-            { q: "Válaszd ki azokat a királyságokat, amelyek a játékban vannak.", options: ["A tüzes királyság", "A nagy Birodalom", "Örök tél gleccser", "A perzselő homok földje"], answer: [1, 2], type: "multiple" },
-            { q: "Válaszd ki, milyen közrendű díszeket lehet venni a Nomád mágszállás alatt.", options: ["3750", "4000", "700", "1750"], answer: [0, 2], type: "multiple" },
-            { q: "Válaszd ki, melyik események adnak 'mester+' módban +6 hullámos megjelenést.", options: ["Nomád", "Szamuráj", "Idegen", "Vérvarjú"], answer: [1, 3], type: "multiple" },
-            { q: "Válaszd ki, azokat a katonákat, amik megtalálhatóak a játékban.", options: ["Galád veterán alabárdos", "Jeges nyilas", "Erdőírtó", "Veterán gnómád harcos"], answer: [0, 1], type: "multiple" },
-
-            { q: "Igaz vagy hamis? A nomád esemény adhat 'Szövet' jutalmat.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
-            { q: "Igaz vagy hamis? Van olyan nemességi verseny, ahol támadási eszközt kell szerezni.", options: ["Igaz", "Hamis"], answer: [0], type: "truefalse" },
-            { q: "Igaz vagy hamis? A királysági ligában a legmagasabb címet 'Pusztító'-nak hívják.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
-            { q: "Igaz vagy hamis? A 100-as szintű 'Dicsőségemlékmű' 500% dicsőségpont bónuszt ad.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
-            { q: "Igaz vagy hamis? A 7-es szintű 'Őrház' 30 városőrt ad.", options: ["Igaz", "Hamis"], answer: [1], type: "truefalse" },
-        ];
+        async function loadQuestions() {
+            try {
+                const response = await fetch('questions.json');
+                if (!response.ok) throw new Error('Hiba a kérdések betöltésekor');
+                allQuestions = await response.json();
+            } catch (error) {
+                alert("Nem sikerült betölteni a kérdéseket: " + error.message);
+            }
+        }
+        document.addEventListener('DOMContentLoaded', () => {
+            loadQuestions();
+        });
 
         const totalQuestions = 10;
         let selectedQuestions = [];
@@ -257,6 +251,10 @@
         const resultDiv = document.getElementById('result');
 
         startBtn.onclick = () => {
+            if (allQuestions.length === 0) {
+                alert("A kérdések még nem töltődtek be, kérlek várj egy pillanatot.");
+                return;
+            }
             playerName = document.getElementById('playerName').value.trim();
             server = document.getElementById('server').value.trim();
             if (!playerName || !server) {
