--- a/competition.html
+++ b/competition.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GGE Discord Verseny (2025.06)</title>
+    <title>GGE Discord Verseny</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous" />
     <link rel="icon" type="image/webp" href="./img_base/favicon.ico" />
@@ -29,15 +29,19 @@
         <div id="mainView" class="note row">
             <div class="mb-3 text-center col-12">
                 <label for="playerName" class="form-label">Játékosnév</label>
-                <input type="text" class="form-control w-50 mx-auto text-center" id="playerName" placeholder="Dániel"
+                <input type="text" class="form-control w-50 mx-auto text-center" id="playerName" placeholder="Ide írd a játékosneved!"
                     required />
             </div>
             <div class="mb-3 text-center col-12">
                 <label for="server" class="form-label">Szerver</label>
-                <input type="text" class="form-control w-50 mx-auto text-center" id="server" placeholder="INT4"
+                <input type="text" class="form-control w-50 mx-auto text-center" id="server" placeholder="Ide írd a szervert, ahol játszol!"
                     required />
             </div>
-
+            <div class="mb-3 text-center col-12">
+                <label for="discordServer" class="form-label">Discord név</label>
+                <input type="text" class="form-control w-50 mx-auto text-center" id="discordServer" placeholder="Ide írd a Discord neved!"
+                    required />
+            </div>
             <div class="d-flex justify-content-center col-12">
                 <button id="startBtn" class="btn btn-warning btn-fixed">Indítás</button>
             </div>
