--- a/competition.html
+++ b/competition.html
@@ -29,7 +29,7 @@
         <div id="mainView" class="note row">
             <div class="mb-3 text-center col-12">
                 <label for="gameSelect" class="form-label">Játék</label>
-                <select id="gameSelect" class="form-control w-50 mx-auto text-center">
+                <select id="gameSelect" class="form-control input-responsive mx-auto text-center">
                     <option value="">Válassz játékot</option>
                     <option value="GGE">Goodgame Empire (Böngészős)</option>
                     <option value="E4K">Empire: Four Kingdoms (Telefonos)</option>
@@ -38,18 +38,18 @@
 
             <div class="mb-3 text-center col-12">
                 <label for="serverSelect" class="form-label">Szerver</label>
-                <select id="serverSelect" class="form-control w-50 mx-auto text-center" disabled>
+                <select id="serverSelect" class="form-control input-responsive mx-auto text-center" disabled>
                     <option value="">Előbb válassz játékot</option>
                 </select>
             </div>
             <div class="mb-3 text-center col-12">
                 <label for="playerName" class="form-label">Játékosnév</label>
-                <input type="text" class="form-control w-50 mx-auto text-center" id="playerName"
+                <input type="text" class="form-control input-responsive mx-auto text-center" id="playerName"
                     placeholder="Ide írd a játékosneved!" required />
             </div>
             <div class="mb-3 text-center col-12">
                 <label for="discordServer" class="form-label">Discord név</label>
-                <input type="text" class="form-control w-50 mx-auto text-center" id="discordServer"
+                <input type="text" class="form-control input-responsive mx-auto text-center" id="discordServer"
                     placeholder="Ide írd a Discord neved!" required />
             </div>
             <div class="d-flex justify-content-center col-12">
