--- a/decorations/index.html
+++ b/decorations/index.html
@@ -5,24 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GGE Decorations</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
+
         <a class="navbar-brand" href="#">GGE Decorations</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
           aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-  
+
         <div class="collapse navbar-collapse" id="navbarContent">
-          <form class="d-flex me-auto" role="search" style="max-width: 300px;">
+          <form class="d-flex me-3" role="search" style="min-width: 180px;">
             <input id="searchInput" class="form-control me-2" type="search" placeholder="Search by name" aria-label="Search" />
           </form>
-  
-          <ul class="navbar-nav">
+
+          <ul class="navbar-nav align-items-center">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="sizeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Size Filter
@@ -31,8 +33,9 @@
                 <!-- Size checkboxes inserted by JS -->
               </ul>
             </li>
-            <li class="nav-item ms-3">
-              <select id="sortSelect" class="form-select form-select-sm" aria-label="Sort decorations">
+
+            <li class="nav-item">
+              <select id="sortSelect" class="form-select form-select-sm" aria-label="Sort decorations" style="min-width: 180px;">
                 <option value="po" selected>Sort by Public Order</option>
                 <option value="pot">Sort by Public Order / Tile</option>
               </select>
