--- a/decorations/index.html
+++ b/decorations/index.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GGE Decorations</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-  <div id="app">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
+  <div class="container">
+    <div class="row">
 
-        <a class="navbar-brand" href="#">GGE Decorations</a>
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <form class="d-flex me-3" role="search" style="min-width: 180px;">
-            <input id="searchInput" class="form-control me-2" type="search" placeholder="Search by name" aria-label="Search" />
-          </form>
-
-          <ul class="navbar-nav align-items-center">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="sizeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <div class="col-12 mb-4">
+        <h1>GGE DECORATIONS</h1>
+        <div class="row note gx-3 gy-2 align-items-center">
+          <div class="col-md-4 col-sm-12">
+            <input id="searchInput" class="form-control custom-input" type="search" placeholder="Search by name"
+              aria-label="Search" />
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <select id="sortSelect" class="form-select custom-select text-center" aria-label="Sort decorations">
+              <option value="po" selected>Sort by Public Order</option>
+              <option value="pot">Sort by Public Order / Tile</option>
+            </select>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <div class="dropdown">
+              <button class="btn btn-custom dropdown-toggle w-100" type="button" id="sizeDropdown"
+                data-bs-toggle="dropdown" aria-expanded="false">
                 Size Filter
-              </a>
-              <ul class="dropdown-menu p-3" aria-labelledby="sizeDropdown" id="sizeFilters">
-                <!-- Size checkboxes inserted by JS -->
-              </ul>
-            </li>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-custom w-100" aria-labelledby="sizeDropdown" id="sizeFilters"></ul>
+            </div>
+          </div>
 
-            <li class="nav-item">
-              <select id="sortSelect" class="form-select form-select-sm" aria-label="Sort decorations" style="min-width: 180px;">
-                <option value="po" selected>Sort by Public Order</option>
-                <option value="pot">Sort by Public Order / Tile</option>
-              </select>
-            </li>
-          </ul>
         </div>
       </div>
-    </nav>
 
-    <main id="content" class="container-fluid">
-      <div id="cards" class="row g-3"></div>
-    </main>
+      <main id="content" class="container-fluid">
+        <div id="cards" class="row g-3"></div>
+      </main>
+    </div>
+
+  </div>
   </div>
 
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
+
 </body>
+
 </html>
