--- a/decorations/index.html
+++ b/decorations/index.html
@@ -21,7 +21,7 @@
         <h1>GGE DECORATIONS</h1>
         <div class="row note gx-3 gy-2 align-items-center">
           <div class="col-md-4 col-sm-12">
-            <input id="searchInput" class="form-control custom-input" type="search" placeholder="Search by name"
+            <input id="searchInput" class="form-control custom-input" type="search" placeholder="Search by name or wodID"
               aria-label="Search" />
           </div>
           <div class="col-md-4 col-sm-12">
