--- a/index.html
+++ b/index.html
@@ -114,7 +114,20 @@
                     </div>
                 </a>
             </div>
-
+            <div class="col-md-6 col-sm-12">
+                <a href="./decorations/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/decorations.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Decorations Overview</h2>
+                        <hr>
+                        <p>This page loads the in-game decorations automatically!</p>
+                        <p>You can search by name, size or ID.</p>
+                    </div>
+                </a>
+            </div>
+            <!--
             <div class="col-md-6 col-sm-12">
                 <a href="./battle_simulator/index.html" class="box" disabled>
                     <div class="box-icon">
@@ -127,6 +140,7 @@
                     </div>
                 </a>
             </div>
+            -->
         </div>
     </div>
 </body>
