--- a/decorations/index.html
+++ b/decorations/index.html
@@ -17,9 +17,9 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-12 mb-4">
+      <div class="col-12 mb-2">
         <h1>GGE DECORATIONS</h1>
-        <div class="row note gx-3 gy-2 align-items-center">
+        <div class="row note gx-3 gy-2 align-items-center pb-4">
           <div class="col-md-4 col-sm-12">
             <input id="searchInput" class="form-control custom-input" type="search" placeholder="Search by name or wodID"
               aria-label="Search" />
