--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mb-2">
-                <h1>GENERALS FORUM LOBBY</h1>
+                <h1>GENERALS FORUM</h1>
                 <p class="note">
                     <span class="warning-icon">!</span>
                     Here you will find so many calculators for the game.
