--- a/decorations/index.html
+++ b/decorations/index.html
@@ -16,13 +16,12 @@
 <body>
   <div class="container">
     <div class="row">
-
       <div class="col-12 mb-2">
         <h1>GGE DECORATIONS</h1>
         <div class="row note gx-3 gy-2 align-items-center pb-3">
           <div class="col-md-4 col-sm-12">
-            <input id="searchInput" class="form-control custom-input" type="search" placeholder="Search by name or wodID"
-              aria-label="Search" />
+            <input id="searchInput" class="form-control custom-input" type="search"
+              placeholder="Search by name or wodID" aria-label="Search" />
           </div>
           <div class="col-md-4 col-sm-12">
             <select id="sortSelect" class="form-select custom-select text-center" aria-label="Sort decorations">
@@ -47,10 +46,17 @@
         <div id="cards" class="row g-1"></div>
       </main>
     </div>
+  
+
 
   </div>
-  </div>
-
+    <div id="imageModal" class="image-modal" onclick="closeImageModal()">
+      <div class="image-modal-inner" onclick="event.stopPropagation()">
+        <span class="image-modal-close" onclick="closeImageModal()">&times;</span>
+        <img id="modalImage" class="image-modal-content" />
+        <div id="modalCaption"></div>
+      </div>
+    </div>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 
