--- a/decorations/index.html
+++ b/decorations/index.html
@@ -17,7 +17,16 @@
   <div class="container">
     <div class="row">
       <div class="col-12 mb-2">
-        <h1>GGE DECORATIONS</h1>
+        <div class="col-12">
+          <h1>GGE DECORATIONS</h1>
+        </div>
+        
+        <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+          <div class="home-icon">
+            <i class="bi bi-house"></i>
+          </div>
+        </a>
+
         <div class="row note gx-3 gy-2 align-items-center pb-3">
           <div class="col-md-4 col-sm-12">
             <input id="searchInput" class="form-control custom-input" type="search"
@@ -38,7 +47,6 @@
               <ul class="dropdown-menu dropdown-menu-custom w-100" aria-labelledby="sizeDropdown" id="sizeFilters"></ul>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -48,7 +56,7 @@
     </div>
 
   </div>
-  
+
   <div id="imageModal" class="image-modal" onclick="closeImageModal()">
     <div class="image-modal-inner" onclick="event.stopPropagation()">
       <span class="image-modal-close" onclick="closeImageModal()">&times;</span>
@@ -56,7 +64,7 @@
       <div id="modalCaption"></div>
     </div>
   </div>
-  
+
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 
