--- a/index.html
+++ b/index.html
@@ -17,12 +17,25 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mb-2">
-                <h1>GENERALS FORUM</h1>
-                <p class="note">
-                    <span class="warning-icon">!</span>
-                    Here you will find so many calculators for the game.
-                    You can use everything for free at any time on any devices!
-                </p>
+                <h1 id="page-header">GENERALS FORUM</h1>
+            </div>
+
+            <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+                <div class="home-icon">
+                    <i class="bi bi-youtube"></i>
+                </div>
+            </a>
+            <div class="col-md-6 col-sm-12">
+                <a href="./decorations/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/decorations.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Decorations Overview</h2>
+                        <hr>
+                        <p>This page loads the in-game decorations automatically!</p>
+                    </div>
+                </a>
             </div>
 
             <div class="col-md-6 col-sm-12">
@@ -37,6 +50,7 @@
                     </div>
                 </a>
             </div>
+
             <div class="col-md-6 col-sm-12">
                 <a href="./food_calculator/index.html" class="box">
                     <div class="box-icon">
@@ -46,6 +60,19 @@
                         <h2>Food Production Calculator</h2>
                         <hr>
                         <p>Calculate your in-game food production easily.</p>
+                    </div>
+                </a>
+            </div>
+            
+            <div class="col-md-6 col-sm-12">
+                <a href="./brewery_simulator/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/brewery-simulator-icon.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Brewery Simulator</h2>
+                        <hr>
+                        <p>Calculate your in-game mead & honey production easily.</p>
                     </div>
                 </a>
             </div>
@@ -77,19 +104,6 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="./brewery_simulator/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/brewery-simulator-icon.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Brewery Simulator</h2>
-                        <hr>
-                        <p>Calculate your in-game mead & honey production easily.</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-6 col-sm-12">
                 <a href="./hol_simulator/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/hall-of-legends-simulator-icon.webp" class="img-fluid">
@@ -111,18 +125,6 @@
                         <h2>Collector event calculator</h2>
                         <hr>
                         <p>Calculate that how many points you need to reach your goal.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-6 col-sm-12">
-                <a href="./decorations/index.html" class="box">
-                    <div class="box-icon">
-                        <img src="./img_base/decorations.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>Decorations Overview</h2>
-                        <hr>
-                        <p>This page loads the in-game decorations automatically!</p>
                     </div>
                 </a>
             </div>
