new main page v2

--- a/index.html
+++ b/index.html
@@ -17,14 +17,35 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mb-2">
-                <h1 id="page-header">GENERALS FORUM</h1>
+                <h1>GENERALS FORUM</h1>
             </div>
 
-            <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
-                <div class="home-icon">
-                    <i class="bi bi-youtube"></i>
-                </div>
-            </a>
+            <div class="col-md-6 col-sm-12">
+                <a href="https://www.youtube.com/@GeneralsCamp" class="box">
+                    <div class="box-icon">
+                        <img src="https://pngimg.com/d/youtube_button_PNG20.png" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>My YouTube channel</h2>
+                        <hr>
+                        <p>You can find many guide & update review videos here!</p>
+                    </div>
+                </a>
+            </div>
+            
+            <div class="col-md-6 col-sm-12">
+                <a href="https://discord.com/invite/goodgamestudios" class="box">
+                    <div class="box-icon">
+                        <img src="https://pngimg.com/d/discord_PNG7.png" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>GGE Discord Server</h2>
+                        <hr>
+                        <p>Join the official Empire community!</p>
+                    </div>
+                </a>
+            </div>
+
             <div class="col-md-6 col-sm-12">
                 <a href="./decorations/index.html" class="box">
                     <div class="box-icon">
@@ -63,7 +84,7 @@
                     </div>
                 </a>
             </div>
-            
+
             <div class="col-md-6 col-sm-12">
                 <a href="./brewery_simulator/index.html" class="box">
                     <div class="box-icon">
