--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
+                <a href="./building_items/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/ci-icon.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Construction Items Overview</h2>
+                        <hr>
+                        <p>This page loads the in-game CI's & TCI's automatically!</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-6 col-sm-12">
                 <a href="./layout_editor/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/layout-icon.webp" class="img-fluid">
