--- a/building_items/index.html
+++ b/building_items/index.html
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-12 mb-2">
         <div class="col-12">
-          <h1>GGE CONSTRUCTION ITEMS</h1>
+          <h1>GGE CI's & TCI's</h1>
         </div>
 
         <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
