--- a/decorations/index.html
+++ b/decorations/index.html
@@ -30,7 +30,7 @@
         <div class="row note gx-3 gy-2 align-items-center pb-3">
           <div class="col-md-4 col-sm-12">
             <input id="searchInput" class="form-control custom-input" type="search"
-              placeholder="Search by name or wodID" aria-label="Search" />
+              placeholder="Search by name, effect or wodID" aria-label="Search" />
           </div>
           <div class="col-md-4 col-sm-12">
             <select id="sortSelect" class="form-select custom-select text-center" aria-label="Sort decorations">
