--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="./img_base/ci-icon.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Construction Items Overview</h2>
+                        <h2>CI's & TCI's Overview</h2>
                         <hr>
                         <p>This page loads the in-game CI's & TCI's automatically!</p>
                     </div>
