--- a/building_items/index.html
+++ b/building_items/index.html
@@ -16,9 +16,9 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 mb-2">
-        <div class="col-12">
-          <h1>GGE CI's & TCI's</h1>
+      <div class="col-12 mb-2 fixed-top-bar">
+        <div class="col-12 page-title">
+          <h1>GGE CONSTRUCTION ITEMS</h1>
         </div>
 
         <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
