--- a/decorations/index.html
+++ b/decorations/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 mb-2">
-        <div class="col-12">
+        <div class="col-12 page-title">
           <h1>GGE DECORATIONS</h1>
         </div>
         
@@ -32,12 +32,14 @@
             <input id="searchInput" class="form-control custom-input" type="search"
               placeholder="Search by name, effect or wodID" aria-label="Search" />
           </div>
+
           <div class="col-md-4 col-sm-12">
             <select id="sortSelect" class="form-select custom-select text-center" aria-label="Sort decorations">
               <option value="po" selected>Sort by Public Order</option>
               <option value="pot">Sort by Public Order / Tile</option>
             </select>
           </div>
+          
           <div class="col-md-4 col-sm-12">
             <div class="dropdown">
               <button class="btn btn-custom dropdown-toggle w-100" type="button" id="sizeDropdown"
