--- a/building_items/index.html
+++ b/building_items/index.html
@@ -28,12 +28,12 @@
         </a>
 
         <div class="row note gx-3 gy-2 align-items-center pb-3">
-          <div class="col-md-4 col-sm-12 mb-2">
+          <div class="col-md-4 col-sm-12">
             <input id="searchInput" class="form-control custom-input" type="search"
               placeholder="Search by name, effect or ID" aria-label="Search" />
           </div>
 
-          <div class="col-md-4 col-sm-12 mb-2">
+          <div class="col-md-4 col-sm-12">
             <select id="durationFilter" class="form-select custom-select text-center" aria-label="Filter by type">
               <option value="all" selected>Show All</option>
               <option value="permanent">Permanent items</option>
@@ -41,7 +41,7 @@
             </select>
           </div>
 
-          <div class="col-md-4 col-sm-12 mb-2">
+          <div class="col-md-4 col-sm-12">
             <select id="appearanceFilter" class="form-select custom-select text-center"
               aria-label="Filter Appearance items">
               <option value="all" selected>Show Appearance items</option>
