search bar filters

--- a/decorations/index.html
+++ b/decorations/index.html
@@ -28,9 +28,37 @@
         </a>
 
         <div class="row note gx-3 gy-2 align-items-center pb-3">
-          <div class="col-md-4 col-sm-12">
-            <input id="searchInput" class="form-control custom-input" type="search"
-              placeholder="Search by name, effect or wodID" aria-label="Search" />
+          <div class="col-md-4 col-sm-12 position-relative">
+            
+            <div class="input-group">
+              <input id="searchInput" class="form-control custom-input" type="search"
+                placeholder="Unavailable to search!" aria-label="Search" />
+              <button class="btn custom-button dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <i class="bi bi-funnel"></i>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end p-3" style="min-width: 200px;">
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input search-filter" type="checkbox" value="name" id="filterName" checked>
+                    <label class="form-check-label" for="filterName">Name</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input search-filter" type="checkbox" value="id" id="filterID" checked>
+                    <label class="form-check-label" for="filterID">ID</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="form-check">
+                    <input class="form-check-input search-filter" type="checkbox" value="effect" id="filterEffect"
+                      checked>
+                    <label class="form-check-label" for="filterEffect">Effect</label>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="col-md-4 col-sm-12">
