--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <img src="./img_base/collector.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Collector event calculator</h2>
+                        <h2>Collector Event Calculator</h2>
                         <hr>
                         <p>Calculate that how many points you need to reach your goal.</p>
                     </div>
