--- a/decorations/index.html
+++ b/decorations/index.html
@@ -62,20 +62,20 @@
           </div>
 
           <div class="col-md-6 col-sm-12">
-            <select id="showFilter" class="form-select custom-select text-center" aria-label="Show filter">
-              <option value="all" selected>Show all decorations</option>
-              <option value="new">Show only new decorations</option>
-            </select>
-          </div>
-
-          <div class="col-md-6 col-sm-12">
             <select id="sortSelect" class="form-select custom-select text-center" aria-label="Sort decorations">
               <option value="po" selected>Sort by Public Order</option>
-              <option value="pot">Sort by Public Order / Tile</option>
+              <option value="pot">Sort by Public Order/Tile</option>
+            </select>
+          </div>
+          
+          <div class="col-md-6 col-sm-12 col-md-6 col-sm-6 col-6">
+            <select id="showFilter" class="form-select custom-select text-center" aria-label="Show filter">
+              <option value="all" selected>Show all</option>
+              <option value="new">Show newest</option>
             </select>
           </div>
 
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-6 col-sm-6 col-6">
             <div class="dropdown">
               <button class="btn btn-custom dropdown-toggle w-100" type="button" id="sizeDropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
