better mobile view

--- a/decorations/index.html
+++ b/decorations/index.html
@@ -67,11 +67,11 @@
               <option value="pot">Sort by Public Order/Tile</option>
             </select>
           </div>
-          
-          <div class="col-md-6 col-sm-12 col-md-6 col-sm-6 col-6">
+
+          <div class="col-md-6 col-sm-6 col-6">
             <select id="showFilter" class="form-select custom-select text-center" aria-label="Show filter">
-              <option value="all" selected>Show all</option>
-              <option value="new">Show newest</option>
+              <option value="all" selected>Show all decorations</option>
+              <option value="new">Show only new decorations</option>
             </select>
           </div>
 
